<resources>
    <string name="app_name">MyCalculator</string>
    <string name="value">0.0</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_add">+</string>
    <string name="button_multiply">*</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_minus">-</string>
    <string name="button_divide">÷</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_sqrt">sqrt</string>
    <string name="button_0">0</string>
    <string name="button_dot">.</string>
    <string name="button_equalTo">=</string>
    <string name="button_clear">clear</string>
</resources>