<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <EditText
            android:id="@+id/value"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:textAlignment="textEnd"
            android:text="@string/value"
            android:inputType="number|numberDecimal|numberSigned"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_1"
            android:text="@string/button_1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/box_button"
            app:backgroundTint="#8A8989"
            android:layout_margin="1dp"
            app:layout_constraintEnd_toStartOf="@+id/button_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/value"/>

        <Button
            android:id="@+id/button_2"
            android:text="@string/button_2"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/box_button"
            app:backgroundTint="#8A8989"
            android:layout_margin="1dp"
            app:layout_constraintEnd_toStartOf="@id/button_3"
            app:layout_constraintStart_toEndOf="@id/button_1"
            app:layout_constraintTop_toBottomOf="@id/value" />

        <Button
            android:id="@+id/button_3"
            android:text="@string/button_3"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/box_button"
            app:backgroundTint="#8A8989"
            android:layout_margin="1dp"
            app:layout_constraintEnd_toStartOf="@id/button_add"
            app:layout_constraintStart_toEndOf="@id/button_2"
            app:layout_constraintTop_toBottomOf="@id/value" />

        <Button
            android:id="@+id/button_add"
            android:text="@string/button_add"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/box_button"
            app:backgroundTint="#8A8989"
            android:layout_margin="1dp"
            app:layout_constraintEnd_toStartOf="@id/button_multiply"
            app:layout_constraintStart_toEndOf="@id/button_3"
            app:layout_constraintTop_toBottomOf="@id/value"/>

        <Button
            android:id="@+id/button_multiply"
            android:text="@string/button_multiply"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/box_button"
            app:backgroundTint="#8A8989"
            android:layout_margin="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/button_add"
            app:layout_constraintTop_toBottomOf="@id/value" />

        <Button
            android:id="@+id/button_4"
            android:text="@string/button_4"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/box_button"
            android:layout_margin="1dp"
            app:backgroundTint="#8A8989"
            app:layout_constraintEnd_toStartOf="@+id/button_5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_1"/>

        <Button
            android:id="@+id/button_5"
            android:text="@string/button_5"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/box_button"
            android:layout_margin="1dp"
            app:backgroundTint="#8A8989"
            app:layout_constraintEnd_toStartOf="@+id/button_6"
            app:layout_constraintStart_toEndOf="@+id/button_4"
            app:layout_constraintTop_toBottomOf="@id/button_2"/>

        <Button
            android:id="@+id/button_6"
            android:text="@string/button_6"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/box_button"
            android:layout_margin="1dp"
            app:backgroundTint="#8A8989"
            app:layout_constraintEnd_toStartOf="@+id/button_minus"
            app:layout_constraintStart_toEndOf="@+id/button_5"
            app:layout_constraintTop_toBottomOf="@id/button_3"/>

        <Button
            android:id="@+id/button_minus"
            android:text="@string/button_minus"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/box_button"
            android:layout_margin="1dp"
            app:backgroundTint="#8A8989"
            app:layout_constraintEnd_toStartOf="@+id/button_divide"
            app:layout_constraintStart_toEndOf="@+id/button_6"
            app:layout_constraintTop_toBottomOf="@id/button_add"/>

        <Button
            android:id="@+id/button_divide"
            android:text="@string/button_divide"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/box_button"
            android:layout_margin="1dp"
            app:backgroundTint="#8A8989"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_minus"
            app:layout_constraintTop_toBottomOf="@id/button_multiply"/>

        <Button
            android:id="@+id/button_7"
            android:text="@string/button_7"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/box_button"
            android:layout_margin="1dp"
            app:backgroundTint="#8A8989"
            app:layout_constraintEnd_toStartOf="@+id/button_8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_4"/>

        <Button
            android:id="@+id/button_8"
            android:text="@string/button_8"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/box_button"
            android:layout_margin="1dp"
            app:backgroundTint="#8A8989"
            app:layout_constraintEnd_toStartOf="@+id/button_9"
            app:layout_constraintStart_toEndOf="@+id/button_7"
            app:layout_constraintTop_toBottomOf="@id/button_5"/>

        <Button
            android:id="@+id/button_9"
            android:text="@string/button_9"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/box_button"
            android:layout_margin="1dp"
            app:backgroundTint="#8A8989"
            app:layout_constraintEnd_toStartOf="@+id/button_sqrt"
            app:layout_constraintStart_toEndOf="@+id/button_8"
            app:layout_constraintTop_toBottomOf="@id/button_6"/>

        <Button
            android:id="@+id/button_sqrt"
            android:text="@string/button_sqrt"
            android:layout_width="160dp"
            android:layout_height="80dp"
            android:background="@drawable/box_button"
            android:layout_margin="1dp"
            app:backgroundTint="#8A8989"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_9"
            app:layout_constraintTop_toBottomOf="@id/button_minus"/>

        <Button
            android:id="@+id/button_0"
            android:text="@string/button_0"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/box_button"
            android:layout_margin="1dp"
            app:backgroundTint="#8A8989"
            app:layout_constraintEnd_toStartOf="@+id/button_dot"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_7"/>

        <Button
            android:id="@+id/button_dot"
            android:text="@string/button_dot"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/box_button"
            android:layout_margin="1dp"
            app:backgroundTint="#8A8989"
            app:layout_constraintEnd_toStartOf="@+id/button_equalsTo"
            app:layout_constraintStart_toEndOf="@+id/button_0"
            app:layout_constraintTop_toBottomOf="@id/button_9"/>

        <Button
            android:id="@+id/button_equalsTo"
            android:text="@string/button_equalTo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/box_button"
            android:layout_margin="1dp"
            app:backgroundTint="#8A8989"
            app:layout_constraintEnd_toStartOf="@+id/button_clear"
            app:layout_constraintStart_toEndOf="@+id/button_dot"
            app:layout_constraintTop_toBottomOf="@id/button_9"/>

        <Button
            android:id="@+id/button_clear"
            android:text="@string/button_clear"
            android:layout_width="160dp"
            android:layout_height="80dp"
            android:background="@drawable/box_button"
            android:layout_margin="1dp"
            app:backgroundTint="#8A8989"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_equalsTo"
            app:layout_constraintTop_toBottomOf="@id/button_sqrt"/>

    </androidx.constraintlayout.widget.ConstraintLayout>